# src/routes/userRoutes.js
@@ -1,8 +1,10 @@
 const { Router } = require ('express')
 const userController = require('../controllers/userControllers');
+const { validateCreateUser } = require('../middlewares/validateUser');
 
 const router = Router()
 
+router.post('/', validateCreateUser, userController.createUser);
 router.get('/', userController.getUsers)
 router.post('/' , userController.createUser)
 router.delete('/:nickName', userController.deleteUser)
